testsuite/tests/properties/invalid_dyn_env/assocs_getter_bad_args.lkt
import common

class Example: FooNode {
    @lazy args_env: LexicalEnv =
        dynamic_lexical_env(Example.assocs_getter)

    fun assocs_getter(@ignored a: Bool): Array[InnerEnvAssoc] =
        null[Array[InnerEnvAssoc]]
}
